--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,10 @@ input {
 
 }
 
+main {
+    padding: 40px 0;
+}
+
 footer {
     border-top: 1px solid #f0ece2;
     padding: 30px 0 0 0;
@@ -51,4 +55,46 @@ a {
     width: 20%;
     padding: 15px 20px;
     font-size: 16px;
+}
+
+.weather-app-data {
+    display: flex;
+    justify-content: space-between;
+}
+
+.weather-app-city {
+    margin: 0;
+    font-size: 38px;
+    line-height: 48px;
+}
+
+.weather-app-details {
+    font-size: 16px;
+    line-height: 24px;
+    color: rgba(39, 33, 66, 0.5);
+    font-weight: 500;
+}
+
+.humidity-value, .wind-speed {
+    color: #c7b198;
+}
+
+.weather-app-temperature-container {
+    display: flex;
+}
+
+.weather-app-icon {
+font-size: 44px;
+margin-top: 22px;
+}
+
+.weather-app-temperature {
+font-size: 85px;
+font-weight: 500;
+margin-left: 10px;
+}
+
+.weather-app-unit {
+margin-top: 18px;
+font-size: 28px;
 }
